# goldenmatch

./: .clinerules  .coverage  .cursorrules  .env.example  .gitignore  .mcpignore  .windsurfrules  20260320_231742_lineage.json  20260320_231809_lineage.json  20260320_232543_lineage.json  20260320_233801_lineage.json  20260320_234306_lineage.json  20260321_145439_lineage.json  20260321_145513_clusters.csv  20260321_145513_lineage.json  20260321_145707_lineage.json  20260321_150019_lineage.json  20260321_150105_lineage.json  20260321_150334_lineage.json  20260321_150436_lineage.json  20260321_150746_lineage.json  20260321_151721_lineage.json  20260321_151938_lineage.json  20260321_152055_lineage.json  20260321_152115_lineage.json  20260321_160832_lineage.json  20260321_161902_lineage.json  20260321_162021_lineage.json  20260321_162129_lineage.json  20260322_124109_lineage.json  20260322_124128_lineage.json  20260322_124154_lineage.json  20260322_125136_lineage.json  20260322_125249_lineage.json  20260322_125328_lineage.json  20260322_125345_lineage.json  20260322_132441_clusters.csv  20260322_132441_lineage.json  20260322_133156_lineage.json  20260322_133201_lineage.json  (+76 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  try-goldenmatch.yml
.github/workflows/: ci.yml  docs.yml  publish-npm.yml  publish.yml  smithery.yml  try-it.yml
dbt-goldenmatch/: README.md  pyproject.toml
dbt-goldenmatch/dbt_goldenmatch/: __init__.py  materialize.py
docs/: _config.yml  agent.md  api-stability.md  architecture.md  benchmarks.md  blocking.md  cli.md  configuration.md  domain-packs.md  evaluation.md  index.md  installation.md  llm.md  llms-full.txt  llms.txt  mcp.md  medium_cover.html  medium_post_plain.md  pipeline.md  platform_posts.md  pprl.md  python-api.md  quick-start.md  reddit_posts.md  rest-api.md  scoring.md  sql-duckdb.md  sql-postgres.md  streaming.md  tui.md  typescript.md
docs/api/: cli.md  python.md  sql.md
docs/getting-started/: installation.md  quickstart.md  sql-extensions.md
docs/guides/: benchmarks.md  blocking.md  pipeline.md
docs/wiki/: Architecture.md  Benchmarks.md  Blocking-Strategies.md  Comparison.md  Database-Integration.md  GPU-Routing.md  Home.md  Installation.md  Interactive-TUI.md  LLM-Boost.md  Pipeline-Overview.md  Python-API.md  Quick-Start.md  dbt-Integration.md
examples/: README.md  advanced_config.py  agent_demo.py  basic_dedupe.py  benchmark.py  custom_config.py  equipment_dedup.py  evaluate_and_tune.py  explain_match.py  llm_product_matching.py  multi_source_pipeline.py  pprl_healthcare.py  streaming_incremental.py  strict_mode_parity.py  verification_inspection.py
goldenmatch/: __init__.py  _api.py  client.py
goldenmatch/a2a/: server.py  skills.py
goldenmatch/api/: __init__.py  server.py
goldenmatch/backends/: __init__.py  duckdb_backend.py  ray_backend.py
goldenmatch/cli/: agent_serve.py  compare.py  dedupe.py  demo.py  evaluate.py  incremental.py  label.py  main.py  match.py  mcp_serve.py  pprl.py  rollback.py  schedule.py  sensitivity.py  serve.py  setup.py  sync.py  watch.py
goldenmatch/config/: loader.py  schemas.py  settings.py  wizard.py
goldenmatch/connectors/: __init__.py  base.py  bigquery.py  databricks.py  hubspot.py  salesforce.py  snowflake.py
goldenmatch/core/: active_sampling.py  agent.py  ann_blocker.py  anomaly.py  api_connector.py  autoconfig.py  autoconfig_verify.py  autofix.py  block_analyzer.py  blocker.py  boost.py  canopy.py  chunked.py  circuit_breaker.py  cloud_ingest.py  cluster.py  compare_clusters.py  cross_encoder.py  dashboard.py  diff.py  domain.py  domain_detector.py  domain_registry.py  embedder.py  evaluate.py  explain.py  explainer.py  golden.py  gpu.py  graph.py  graph_er.py  ingest.py  learned_blocking.py  lineage.py  llm_budget.py  llm_cluster.py  llm_extract.py  llm_labeler.py  llm_scorer.py  match_one.py  (+22 more)
goldenmatch/db/: __init__.py  ann_index.py  blocking.py  clusters.py  connector.py  hybrid_blocking.py  metadata.py  reconcile.py  sync.py  watch.py  writer.py
goldenmatch/domains/: electronics.yaml  financial.yaml  healthcare.yaml  people.yaml  real_estate.yaml  retail.yaml  software.yaml
goldenmatch/mcp/: __init__.py  agent_tools.py  server.py
goldenmatch/output/: report.py  writer.py
goldenmatch/plugins/: __init__.py  base.py  registry.py
goldenmatch/pprl/: __init__.py  autoconfig.py  protocol.py
goldenmatch/prefs/: store.py
goldenmatch/tui/: app.py  engine.py  sidebar.py
goldenmatch/utils/: transforms.py
scripts/: gpu_colab_notebook.ipynb  gpu_endpoint.py  setup_vertex_ai.sh
tests/: analyze_fuzzy.py  analyze_results.py  bench_1m.py  conftest.py  generate_synthetic.py  test_a2a.py  test_active_sampling.py  test_agent.py  test_ann_blocker.py  test_ann_pairs.py  test_ann_subblock.py  test_anomaly_cloud.py  test_api.py  test_api_scheduler.py  test_autoconfig.py  test_autoconfig_benchmarks.py  test_autoconfig_enhanced.py  test_autoconfig_regressions.py  test_autoconfig_verify.py  test_autofix.py  test_block_analyzer.py  test_blocker.py  test_canopy.py  test_chunked.py  test_circuit_breaker.py  test_cli_dedupe.py  test_cli_incremental.py  test_cli_label.py  test_cli_match.py  test_cli_preview.py  test_client_and_jupyter.py  test_cluster.py  test_column_map.py  test_compare_clusters.py  test_config.py  test_connectors.py  test_corrections.py  test_cross_encoder.py  test_db.py  test_diff_preview_rollback.py  (+60 more)
tests/benchmarks/: run_active_sampling.py  run_amazon_google_bench.py  run_ann_finetune_sim.py  run_boost_accuracy.py  run_boost_demo.py  run_cross_encoder_sim.py  run_domain_bench.py  run_leipzig.py  run_llm_boost_sim.py  run_llm_budget_bench.py  run_llm_scorer.py  run_ncvr_pprl.py  run_optimal_boost.py  run_pprl_benchmarks.py  run_pprl_final.py  run_product_sweep.py  run_scale_curve.py  run_v030_benchmarks.py  run_v030_quick.py  run_v060_benchmarks.py
tests/fixtures/: bench_config.yaml  measure_ncvr_baseline.py  (+1 more)
(+54 files in other folders)
