[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goldenmatch"
version = "0.1.0"
description = "High-performance CLI for record deduplication, list matching, and golden record creation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Ben Severn", email = "benzsevern@gmail.com" }]

dependencies = [
    "polars>=1.0",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rapidfuzz>=3.0",
    "jellyfish>=1.0",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "textual>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
goldenmatch = "goldenmatch.cli.main:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
